Refactor js link

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -69,6 +69,6 @@
         </div>
     </nav>
     <!-- javascript -->
-    <script src="C:\Users\victo\MyProjects\Navbar\backend\app.js"></script>
+    <script src="..\backend\app.js"></script>
   </body>
 </html>
